# mcp-hub

./: .gitignore  Makefile  NOTES.txt  README.md  go.mod  go.sum  main.go  pyproject.toml  servers.yaml  test-build.sh  test-count.sh  test-mv.sh  test-run.sh
hack/mcp-agent/: README.md  main.py  pyproject.toml  servers.yaml
hack/mcp-agent/output/: cal-server.yaml  ccxt-mcp-server.yaml  confluence-mcp-server.yaml  ffmpeg-mcp-server.yaml  genaiscript.yaml  hedera-mcp-server.yaml  marvel-mcp.yaml  mcp-atlassian-server.yaml  mcp-image-compression.yaml  mcp-repl.yaml  mcp-stock-analysis-server.yaml  mcp-yeoman.yaml  nx-mcp-server.yaml  omi-mcp-server.yaml  playfab-mcp-server.yaml  poc-mcp-server.yaml  postgresql-advanced-mcp-server.yaml  postgresql-full-access-mcp-server.yaml  pulse-cn-mcp-server.yaml  shopify-dev-mcp.yaml  shopify-mcp.yaml  siyuan-note-mcp-server.yaml  sysauto-ask-mcp-server.yaml  tiangong-lca-mcp-server.yaml  todoist-mcp.yaml
hack/mcp-agent/src/: analyse.py  test_validator.py  utils.py
hack/mcp-agent/src/agents/: __init__.py  agent.py  assembler_agent.py  base_agent.py  build_agent.py  config_agent.py  entrypoint_agent.py  env_agent.py  metadata_agent.py  run_agent.py  source_agent.py  validator.py  validator_agent.py
hack/mcp-agent/src/models/: __init__.py  gemini.py
hack/mcp-agent/src/processor/: __init__.py  processor.py  static_analyse.py  utils.py
hack/mcp-agent/src/servers/: __init__.py  glama.py  types.py  utils.py
hack/mcp-agent/src/shared/: types.py
hack/mcp-agent/src/tools/: __init__.py  (+2 more)
hack/mcp-agent/tests/: test_processor.py
(+203 files in other folders)
